--- a/src/pages/tm-setup/tm-setup.scss
+++ b/src/pages/tm-setup/tm-setup.scss
@@ -24,9 +24,18 @@ page-tm-setup {
 	.taste-frame{
 		height: calc(100vh - 15vh);
 		background: #fff;
-		border-radius: 10px;
-		margin: 20px 10px 10px;
+		border-radius: 30px;
+		margin: 20px 0 0;
+		padding: 5px;
 		box-shadow: 0 2px 20px rgba(0, 0, 0, 0.15);
+		position: relative;
+
+		button{
+			position: absolute;
+			bottom: 10px;
+			left: 10px;
+			width: calc(100% - 20px);
+		}
 	}
 
 	.small{
