--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,6 +1,7 @@
 page-home {
 	.content-md,
 	.content-ios{
+		background: url('../../assets/imgs/auth_bg.jpg') no-repeat center center / cover;
 
 	}
 	&:before{
@@ -12,36 +13,36 @@ page-home {
 		background: rgba(0,0,0,0.3);
 		z-index: 1;
 	}
-	&:after{
-		content: " ";
-		width: 300vw;
-		height: 300vw;
-		position: absolute;
-		display: block;
-		background: url('../../assets/imgs/auth_bg.jpg') no-repeat center center / cover;
-		z-index: 0;
-		left: -50vw;
-		top: -50vw;
-		-webkit-animation-name: rotate;
-		-webkit-animation-duration:100000ms;
-		-webkit-animation-iteration-count:infinite;
-		-webkit-animation-timing-function:linear;
-		-moz-animation-name: rotate;
-		-moz-animation-duration:100000ms;
-		-moz-animation-iteration-count:infinite;
-		-moz-animation-timing-function:linear;
-
-
-		@-webkit-keyframes rotate {
-			from {-webkit-transform:rotate(0deg);}
-			to {  -webkit-transform:rotate(360deg);}
-		}
-
-		@-moz-keyframes rotate {
-			from {-moz-transform:rotate(0deg);}
-			to {  -moz-transform:rotate(360deg);}
-		}
-	}
+	// &:after{
+	// 	content: " ";
+	// 	width: 300vw;
+	// 	height: 300vw;
+	// 	position: absolute;
+	// 	display: block;
+	// 	background: url('../../assets/imgs/auth_bg.jpg') no-repeat center center / cover;
+	// 	z-index: 0;
+	// 	left: -50vw;
+	// 	top: -50vw;
+	// 	-webkit-animation-name: rotate;
+	// 	-webkit-animation-duration:100000ms;
+	// 	-webkit-animation-iteration-count:infinite;
+	// 	-webkit-animation-timing-function:linear;
+	// 	-moz-animation-name: rotate;
+	// 	-moz-animation-duration:100000ms;
+	// 	-moz-animation-iteration-count:infinite;
+	// 	-moz-animation-timing-function:linear;
+  //
+  //
+	// 	@-webkit-keyframes rotate {
+	// 		from {-webkit-transform:rotate(0deg);}
+	// 		to {  -webkit-transform:rotate(360deg);}
+	// 	}
+  //
+	// 	@-moz-keyframes rotate {
+	// 		from {-moz-transform:rotate(0deg);}
+	// 		to {  -moz-transform:rotate(360deg);}
+	// 	}
+	// }
 	.brand{
 		padding: 4em;
 		text-align: center;
