--- a/src/pages/tm-setup/tm-setup.scss
+++ b/src/pages/tm-setup/tm-setup.scss
@@ -63,6 +63,8 @@ page-tm-setup {
 		text-transform: uppercase;
 		text-align: center;
 		margin-top: 5px;
+		font-size: 2em;
+
 		@extend .slide-up-fade-in;
 		animation-delay: 200ms;
 	}
