Fix nomenclature of some components

--- a/src/pages/login/login.component.html
+++ b/src/pages/login/login.component.html
@@ -23,7 +23,7 @@
   </ion-list>
 
   <div padding>
-    <button block (click)="login()" >Sign In</button>
+    <button block>Sign In</button>
   </div>
 
 </ion-content>
