--- a/src/pages/login/login.component.html
+++ b/src/pages/login/login.component.html
@@ -6,7 +6,9 @@
 
 <ion-content padding>
 
-	<div class="brand"><img src="../../assets/imgs/skipLogo.svg" alt="" /></div>
+	<div class="brand">
+    <img src="../../assets/imgs/skipLogo.svg" alt="" />
+  </div>
 
   <ion-list inset>
 
