Add Page tasteMeter – Suggestions

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -22,6 +22,7 @@ $white: #ffffff;
 $redskip: #be2c2c;
 $green: #1fc52b;
 $warm-grey: #9b9b9b;
+$light-khaki: #f4e3c4;
 
 $brandonBlack:"BrandonGrotesque";
 $OpenSans:"OpenSans";
