--- a/src/assets/components/all.scss
+++ b/src/assets/components/all.scss
@@ -1,5 +1,4 @@
-@import 'buttons';
-@import 'cloud-checkbox';
+@import 'buttons','cloud-checkbox','text-styles';
 
 .slide-up-fade-in{
     animation: slide-up-fade-in ease 1s;
