--- a/src/pages/tasteMeter-Suggestions/TasteMeter-Suggestions.component.html
+++ b/src/pages/tasteMeter-Suggestions/TasteMeter-Suggestions.component.html
@@ -6,8 +6,22 @@
 
 
 
-		<h1>Hi, %John%</h1>
-		<h2>This is our suggestions for you based on your taste</h2>
+		<h1 class="page-title">Hi, %John%</h1>
+		<h2 class="page-subtitle">This is our suggestions for you based on your taste</h2>
+
+		<ul class="taste-suggestions-carousel">
+
+				<li class="taste-item">
+					<div class="taste-thumbnail">
+						<img src="" alt="">
+					</div>
+					<div class="taste-meta">
+						<h2 class="taste-product-name">Green Salad</h2>
+						<span class="taste-venue">The Vegan Squad</span>
+						<span class="taste-price">$14.90</span>
+					</div>
+				</li>
+			</ul>
 
 
 
