Implement the login method, saving in a Local Storage

--- a/src/pages/login/login.component.scss
+++ b/src/pages/login/login.component.scss
@@ -30,6 +30,7 @@ login-component {
 			padding: 0;
 		}
 	}
+	.item-label-fixed{ color: #fff;}
 	.item-inner {
 		border-bottom: 1px solid rgba(255,255,255,0.4) !important;
 	}
