--- a/src/pages/login/login.component.html
+++ b/src/pages/login/login.component.html
@@ -14,18 +14,18 @@
 
     <ion-item>
       <ion-label fixed>Username</ion-label>
-      <ion-input type="text" value=""></ion-input>
+      <ion-input type="text" value="skip@skip.com" [(ngModel)]="userData.username" ></ion-input>
     </ion-item>
 
     <ion-item>
       <ion-label fixed>Password</ion-label>
-      <ion-input type="password"></ion-input>
+      <ion-input type="password" value="9zYHxGEd8bgqx6BukhYdVKD" [(ngModel)]="userData.password"></ion-input>
     </ion-item>
 
   </ion-list>
 
   <div padding>
-    <button block>Sign In</button>
+    <button block (click)="submitLogin()">Login</button>
   </div>
 
 </ion-content>
