--- a/src/pages/tasteMeter-Suggestions/TasteMeter-Suggestions.component.html
+++ b/src/pages/tasteMeter-Suggestions/TasteMeter-Suggestions.component.html
@@ -12,13 +12,13 @@
 		<ul class="taste-suggestions-carousel">
 
 				<li class="taste-item">
-					<div class="taste-thumbnail">
-						<img src="" alt="">
+					<div class="taste-thumbnail" style="background-image:url('../../assets/imgs/sample-image-635912088.jpg');">
+
 					</div>
 					<div class="taste-meta">
 						<h2 class="taste-product-name">Green Salad</h2>
-						<span class="taste-venue">The Vegan Squad</span>
-						<span class="taste-price">$14.90</span>
+						<span class="taste-product-venue">The Vegan Squad</span>
+						<span class="taste-product-price">$14.90</span>
 					</div>
 				</li>
 			</ul>
