--- a/src/pages/tasteMeter-Suggestions/TasteMeter-Suggestions.component.scss
+++ b/src/pages/tasteMeter-Suggestions/TasteMeter-Suggestions.component.scss
@@ -36,14 +36,34 @@ page-tasteMeter-Suggestions {
 		margin-top: 5px;
 		font-size: 2em;
 
-		@extend .slide-up-fade-in;
+		@extend .slide-down-fade-in;
 		animation-delay: 200ms;
 	}
 
 	h2.page-subtitle{
 		@extend .page-title-masked-h2;
-		@extend .slide-up-fade-in;
+		@extend .slide-down-fade-in;
 		animation-delay: 300ms;
+	}
+
+	.taste-thumbnail{
+		@extend .slide-down-fade-in;
+		animation-delay: 400ms;
+	}
+
+	.taste-product-name{
+		@extend .slide-down-fade-in;
+		animation-delay: 500ms;
+	}
+
+	.taste-product-venue{
+		@extend .slide-down-fade-in;
+		animation-delay: 600ms;
+	}
+
+	.taste-product-price{
+		@extend .slide-down-fade-in;
+		animation-delay: 700ms;
 	}
 
 
