--- a/src/assets/components/_text-styles.scss
+++ b/src/assets/components/_text-styles.scss
@@ -47,6 +47,7 @@ $OpenSans:"OpenSans";
 	color: $black;
 	display: block;
 	text-transform: uppercase;
+	margin: 0;
 }
 
 .product-price {
@@ -56,6 +57,8 @@ $OpenSans:"OpenSans";
 	color: $redskip;
 	display: block;
 	text-transform: uppercase;
+	margin: 0;
+
 }
 
 .product-venue {
