--- a/src/pages/tasteMeter-Setting-Up/TasteMeter-Setting-Up.scss
+++ b/src/pages/tasteMeter-Setting-Up/TasteMeter-Setting-Up.scss
@@ -102,7 +102,7 @@ page-TasteMeter-Setting-Up {
 			text-transform: uppercase;
 			font-size: 2em;
 			text-align: center;
-			margin: 0;
+			margin: 0 0 5px;
 			padding: 0;
 		}
 		p{
@@ -112,6 +112,7 @@ page-TasteMeter-Setting-Up {
 			font-family: $brandonBlack;
 			text-transform: uppercase;
 			font-size: 1.5em;
+			line-height: 1.3em;
 			text-align: center;
 		}
 	}
