--- a/src/pages/tasteMeter/TasteMeter.component.html
+++ b/src/pages/tasteMeter/TasteMeter.component.html
@@ -19,6 +19,6 @@
 		<button type="button" name="button">Next</button>
 
 	</div>
-	<span class="center small" >skip this step</span>
+	<span class="center small" (click)="nextPage()">skip this step</span>
 
 </ion-content>
