--- a/src/pages/tasteMeter/TasteMeter.component.html
+++ b/src/pages/tasteMeter/TasteMeter.component.html
@@ -1,24 +1,20 @@
 
 
 <ion-content padding>
-
-
-
 	<div class="taste-frame">
 		<span class="welcome">Welcome!</span>
 		<h1>TasteMeter</h1>
 		<h2 class="small">Tell us about your favorite foods</h2>
 
-		<ul class="cloud-list">
-			<li *ngFor="let taste of tasteOptions" (click)="setTasteOption()" >
+		<ul class="cloud-list" (click)="scroll($event)" >
+			<li *ngFor="let taste of tasteOptions" >
 				<input type="checkbox" name="checkbox-option" id="checkbox-button-opt-{{ taste.id }}" class="hide-checkbox" value="{{ taste.id }}">
-				<label for="checkbox-button-opt-{{ taste.id }}">{{ taste.name }}</label>
+				<label for="checkbox-button-opt-{{ taste.id }}" (click)="setTasteOption( taste )" >{{ taste.name }}</label>
 			</li>
 		</ul>
 
-		<button type="button" name="button">Next</button>
+		<button type="button" name="button" (click)="nextPage($event)">Next</button>
 
 	</div>
-	<span class="center small" (click)="nextPage()">skip this step</span>
 
 </ion-content>
