--- a/src/pages/tasteMeter-Suggestions/TasteMeter-Suggestions.component.html
+++ b/src/pages/tasteMeter-Suggestions/TasteMeter-Suggestions.component.html
@@ -2,29 +2,25 @@
 
 <ion-content padding>
 
+	<h1 class="page-title">Hi, {{ userData.name }}</h1>
 
+	<h2 class="page-subtitle">This is our suggestions for you based on your taste</h2>
 
+	<ul class="taste-suggestions-carousel">
 
+		<li class="taste-item">
+			<ngx-slick class="carousel" #slickModal="slick-modal" [config]="slideConfig" (afterChange)="afterChange($event)">
+				<div ngxSlickItem *ngFor="let slide of slides" class="slide">
+						<img src="{{ slide.img }}" class="taste-thumbnail" >
+				</div>
+			</ngx-slick>
+			<div class="taste-meta">
+				<h2 class="taste-product-name">Green Salad</h2>
+				<span class="taste-product-venue">The Vegan Squad</span>
+				<span class="taste-product-price">$14.90</span>
+			</div>
+		</li>
 
-		<h1 class="page-title">Hi, %John%</h1>
-		<h2 class="page-subtitle">This is our suggestions for you based on your taste</h2>
-
-		<ul class="taste-suggestions-carousel">
-
-				<li class="taste-item">
-					<div class="taste-thumbnail" style="background-image:url('../../assets/imgs/sample-image-635912088.jpg');">
-
-					</div>
-					<div class="taste-meta">
-						<h2 class="taste-product-name">Green Salad</h2>
-						<span class="taste-product-venue">The Vegan Squad</span>
-						<span class="taste-product-price">$14.90</span>
-					</div>
-				</li>
-			</ul>
-
-
-
-
+	</ul>
 
 </ion-content>
