Implments the Carousel on Taste Meter Suggestion

--- a/src/pages/tasteMeter/TasteMeter.component.html
+++ b/src/pages/tasteMeter/TasteMeter.component.html
@@ -6,7 +6,7 @@
 		<h1>TasteMeter</h1>
 		<h2 class="small">Tell us about your favorite foods</h2>
 
-		<ul class="cloud-list" (click)="scroll($event)" >
+		<ul class="cloud-list" >
 			<li *ngFor="let taste of tasteOptions" >
 				<input type="checkbox" name="checkbox-option" id="checkbox-button-opt-{{ taste.id }}" class="hide-checkbox" value="{{ taste.id }}">
 				<label for="checkbox-button-opt-{{ taste.id }}" (click)="setTasteOption( taste )" >{{ taste.name }}</label>
