--- a/src/assets/components/components.scss
+++ b/src/assets/components/components.scss
@@ -1,5 +1,7 @@
-@import 'text-styles',
+@import
+'text-styles',
 'buttons',
 'cloud-checkbox',
 'taste-product',
-'animations';
+'animations',
+'taste-meter';
