--- a/src/assets/components/_text-styles.scss
+++ b/src/assets/components/_text-styles.scss
@@ -69,3 +69,13 @@ $OpenSans:"OpenSans";
 	display: block;
 	color: $warm-grey;
 }
+
+
+.info-label {
+	font-family: $OpenSans;
+	font-size: 1.2em;
+	font-style: italic;
+	text-align: center;
+	color: $warm-grey;
+	display: block;
+}
