--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -40,3 +40,26 @@ span.center{
 	background: transparent;
 }
 @import '../assets/components/components';
+
+.dish-meter-logo{
+	max-width: 200px;
+	margin-top: 20px;
+}
+
+.page-frame{
+	&:before{
+		content: " ";
+		display: block;
+		width: 100vw;
+		height: 60vh;
+		//background: $redskip;
+		clip-path: polygon(0 0, 100vw 0, 100vw 70%, 0 100%);
+		background-image: linear-gradient(141deg, #fd6e6e, #d90fc7);
+		z-index: 1;
+		position: absolute;
+		top: 0;
+		left: 0;
+		@extend .slide-down-fade-in;
+		animation-delay: 0ms;
+	}	
+}
