--- a/src/assets/components/_taste-meter.scss
+++ b/src/assets/components/_taste-meter.scss
@@ -1,12 +1,11 @@
 .taste-frame{
-	height: calc(100vh - 8vh);
+	height: calc(100vh - 10vh);
 	background: #fff;
 	border-radius: 30px;
 	margin: 20px 0 0;
-	padding: 5px;
+	padding: 0 5px;
 	box-shadow: 0 2px 20px rgba(0, 0, 0, 0.15);
 	position: relative;
-	margin-bottom: 20px;
 
 	@extend .slide-up-fade-in;
 
@@ -17,17 +16,48 @@
 		width: calc(100% - 20px);
 	}
 }
+.dish-wrapper{
+	position: relative;
 
-.cloud-list {
+	&:before{
+		width: 100%;
+		height: 30px;
+		content: "";
+		position: absolute;
+		left: 0;
+		top: 0;
+		background-image: linear-gradient(to top, rgba(255,255,255,0) 0%, rgba(255,255,255, 1) 100%);
+		z-index: 2;
+	}
+	&:after{
+		width: 100%;
+		height: 30px;
+		content: "";
+		position: absolute;
+		left: 0;
+		bottom: 0;
+		background-image: linear-gradient(to bottom, rgba(255,255,255,0) 0%, rgba(255,255,255, 1) 100%);
+		z-index: 2;
+	}
+}
+.dish-list {
 	$total-items: 200;
-	height: calc(100vh - 40vh);
+	height: 350px;
 	overflow-y: scroll;
 	border-radius: 3vw;
+	padding: 30px 0;
+	margin: 0;
+	position: relative;
+	text-align: center;
+	justify-content: center;
+	display: flex;
+	flex-wrap: wrap;
+	@extend .clean-list;
+
 	li{
 		animation-delay: 500ms;
 		@extend .slide-up-fade-in;
 		&:first-child{
-
 		}
 	}
 
