--- a/src/assets/components/_taste-product.scss
+++ b/src/assets/components/_taste-product.scss
@@ -1,29 +1,98 @@
 $prefix: 'taste';
 
+.slick-list {
+	overflow: visible;
+}
 
-ul.#{$prefix}-suggestions-carousel{
+.slick-slide{
+	transform: scale(0.8); /* you need a scale here to allow it to transition in both directions */
+	transition: 0.5s all ease;
+	padding: 0 !important;
+	opacity: 0.7;
+
+	img {
+		border-radius: 7px !important;
+		height: 38vh;
+	}
+
+
+	&.slick-active{
+		opacity: 1;
+		transform: scale(1); /* you need a scale here to allow it to transition in both directions */
+		.taste-meta, .taste-actions{
+			display: block;
+		}
+	}
+}
+
+
+
+.#{$prefix}-suggestions-carousel{
 	margin: 20px 0;
 	@extend .clean-list;
 
-	li.#{$prefix}-item{
 
-		.#{$prefix}-thumbnail{
-			border-radius: 7px !important;
-			padding: 4vw;
+	.slick-slide{position: relative;}
+
+	.#{$prefix}-thumbnail{
+		border-radius: 7px !important;
+		background: $white;
+
+	}
+	.#{$prefix}-meta{
+		margin-top: 30px;
+
+		.#{$prefix}-product-name{
+			@extend .product-title;
 		}
-		.#{$prefix}-meta{
+		.#{$prefix}-product-venue{
+			@extend .product-venue;
+		}
+		.#{$prefix}-product-price{
+			@extend .product-price;
+		}
+	}
+	.slick-active{
+		position: relative;
+		overflow: visible;
+		.taste-actions{
+			width: 100%;
+			font-size: 2.5em;
+			display: flex !important;
+			justify-content: space-between;
+			margin-top: -30px;
 
-			.#{$prefix}-product-name{
-				@extend .product-title;
+
+			.icon{
+				height: 60px;
+				width:60px;
+
+				&.thumbs-up{
+					
+					margin-right: -12vw;
+				}
+				&.thumbs-down{
+					margin-left: -12vw;
+
+				}
+
 			}
-			.#{$prefix}-product-venue{
-				@extend .product-venue;
-			}
-			.#{$prefix}-product-price{
-				@extend .product-price;
+
+			ion-icon{
+				padding: 10px;
+				width: 60px;
+				height: 60px;
+				text-align: center;
+				border-radius: 100px;
+				color: $white;
+
+
 			}
 		}
+	}
 
+	.taste-meta, .taste-actions{
+		display: none;
 	}
 
 }
