--- a/src/pages/tasteMeter-Suggestions/TasteMeter-Suggestions.component.scss
+++ b/src/pages/tasteMeter-Suggestions/TasteMeter-Suggestions.component.scss
@@ -4,41 +4,10 @@ page-tasteMeter-Suggestions {
 		background: #eee;
 		position: relative;
 
+		@extend .page-frame;
 		&:before{
-			content: " ";
-			display: block;
-			width: 200vw;
-			height: 80vh;
-			//background: $redskip;
-
 			background-image: linear-gradient(to top, #FD6E6E 0%, #D90F77 100%);
-
-			z-index: 1;
-			position: absolute;
-			top: -50vw;
-			left: -50vw;
-			-ms-transform: rotate(-15deg); /* IE 9 */
-			-webkit-transform: rotate(-15deg); /* Chrome, Safari, Opera */
-			transform: rotate(-15deg);
 		}
-
-		.scroll-content{
-			overflow: hidden;
-			padding: 40px 40px 0px 40px !important;
-		}
-	}
-
-	.slick-list {
-		overflow: visible;
-	}
-
-	.slick-slide img {
-		border-radius: 7px !important;
-		height: 38vh;
-	}
-
-	.slick-current img {
-		padding: 0vh !important;
 	}
 
 	h1.page-title{
@@ -49,36 +18,47 @@ page-tasteMeter-Suggestions {
 		padding-top: 0px;
 		font-size: 2em;
 		margin-bottom: 15px;
-
-		@extend .slide-down-fade-in;
-		animation-delay: 200ms;
 	}
 
 	h2.page-subtitle{
 		@extend .page-title-masked-h2;
-		@extend .slide-down-fade-in;
-		animation-delay: 300ms;
+
 		margin-bottom: 35px;
 	}
 
-	.taste-thumbnail{
-		@extend .slide-down-fade-in;
-		animation-delay: 400ms;
+	.taste-meta{
+		@extend .fade-in;
+		animation-delay: 200ms;
+	}
+	.taste-actions{
+
+		.icon{
+
+
+			&.thumbs-up{
+				@extend .slide-up-fade-in;
+
+			}
+			&.thumbs-down{
+				@extend .slide-down-fade-in;
+
+			}
+		}
 	}
 
 	.taste-product-name{
-		@extend .slide-down-fade-in;
-		animation-delay: 500ms;
+		@extend .fade-in;
+		animation-delay: 100ms;
 	}
 
 	.taste-product-venue{
-		@extend .slide-down-fade-in;
-		animation-delay: 600ms;
+		@extend .fade-in;
+		animation-delay: 200ms;
 	}
 
 	.taste-product-price{
-		@extend .slide-down-fade-in;
-		animation-delay: 700ms;
+		@extend .fade-in;
+		animation-delay: 300ms;
 	}
 
 }
