--- a/src/pages/tasteMeter-Suggestions/TasteMeter-Suggestions.component.html
+++ b/src/pages/tasteMeter-Suggestions/TasteMeter-Suggestions.component.html
@@ -14,8 +14,8 @@
 
 				<div class="taste-meta">
 					<h2 class="taste-product-name">{{ slide.name }}</h2>
-					<span class="taste-product-venue">The Vegan Squad</span>
-					<span class="taste-product-price">$14.90</span>
+					<span class="taste-product-venue">{{ slide.venue }}</span>
+					<span class="taste-product-price">${{ slide.price }}</span>
 				</div>
 
 				<div class="taste-actions">
