--- a/src/pages/tasteMeter-setting-up/tasteMeterSettingUp.scss
+++ b/src/pages/tasteMeter-setting-up/tasteMeterSettingUp.scss
@@ -3,51 +3,19 @@ page-TasteMeter-Setting-Up {
 	.content.content-ios, .content.content-md{
 		background: #eee;
 		position: relative;
+		@extend .page-frame;
 
-		&:before{
-			content: " ";
-			display: block;
-			width: 200vw;
-			height: 80vh;
-			//background: $redskip;
-
-			background-image: linear-gradient(to top, #f77062 0%, #fe5196 100%);
-
-			z-index: 1;
-			position: absolute;
-			top: -50vw;
-			left: -50vw;
-			-ms-transform: rotate(-15deg); /* IE 9 */
-			-webkit-transform: rotate(-15deg); /* Chrome, Safari, Opera */
-			transform: rotate(-15deg);
-		}
 	}
 
 	.taste-frame{
+		height: calc(100vh - 120px);
 	}
 
 
 	h1{
-		font-family: $brandonBlack;
-		color: $redskip;
-		text-transform: uppercase;
+
 		text-align: center;
-		margin-top: 40px !important;
-		font-size: 2em;
 
-		// @extend .slide-up-fade-in;
-		// animation-delay: 200ms;
-	}
-
-	.small{
-		font-size: 1em;
-		text-align: center;
-		font-family: $OpenSans;
-		font-style: italic;
-		color: $warm-grey;
-
-		@extend .slide-up-fade-in;
-		animation-delay: 300ms;
 	}
 
 	.settingUp{
