Add Restaurant List Page

--- a/src/pages/tasteMeter-Suggestions/TasteMeter-Suggestions.component.scss
+++ b/src/pages/tasteMeter-Suggestions/TasteMeter-Suggestions.component.scss
@@ -6,7 +6,7 @@ page-tasteMeter-Suggestions {
 
 		@extend .page-frame;
 		&:before{
-			background-image: linear-gradient(to top, #FD6E6E 0%, #D90F77 100%);
+			//background-image: linear-gradient(to top, #FD6E6E 0%, #D90F77 100%);
 		}
 	}
 
