--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -94,10 +94,15 @@ ion-content[padding]{
 
 }
 .ion-page.show-page .show-tabbar{
-	background: none;
+	@extend .page-frame;
 	top: 0;
 	padding-top: 20px;
 	bottom: inherit !important;
+	overflow: hidden;
+	&:before{
+
+		z-index: 0;
+	}
 
 	a{
 		color: $white;
