--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -99,6 +99,7 @@ ion-content[padding]{
 	padding-top: 20px;
 	bottom: inherit !important;
 	overflow: hidden;
+	border: none;
 	&:before{
 
 		z-index: 0;
