--- a/src/pages/tasteMeter/TasteMeter.component.scss
+++ b/src/pages/tasteMeter/TasteMeter.component.scss
@@ -31,10 +31,13 @@ page-tasteMeter-setup {
 
 	.loader {
 		position: absolute;
-		top: 0;
-		left: 0;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
 		height: 100%;
 		width: 100%;
+		max-width: 70px;
+		max-height: 70px;
 
 		svg {
 			width: 14vh;
